// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> when children are passed and \`labelTag\` prop is "div" should match the snapshot 1`] = `
<div>
  <span>
    label
  </span>
</div>
`;

exports[`<Checkbox /> when children are passed should match the snapshot 1`] = `
<div>
  <label>
    <div
      class="icheckbox indeterminate"
    >
      <input
        style="opacity: 0; position: absolute;"
        type="checkbox"
        value=""
      />
      <ins
        class="iCheck-helper"
        role="presentation"
        style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
      />
    </div>
    <span>
      label
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> when no props are passed should match the snapshot 1`] = `
<div>
  <div
    class="icheckbox indeterminate"
  >
    <input
      style="opacity: 0; position: absolute;"
      type="checkbox"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
    />
  </div>
</div>
`;
